--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "geopins-project",
+  "name": "apollo-server-react-boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
